# ML-2Module

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  evaluate.py  model_impl.py  pyproject.toml  train.py
My First Project.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
My First Project.v1i.yolov8/train/labels/: video1_mp4-0000_jpg.rf.e6eb7f30030ab8fd4dc95d997d5792d9.txt  video1_mp4-0001_jpg.rf.5889021b759a804a2899d5dbb210a44c.txt  video1_mp4-0002_jpg.rf.3210105f845251bf9e6b0a82962dc2ad.txt  video1_mp4-0003_jpg.rf.5da639a3deaeb61269ef64e89ebca8b7.txt  video1_mp4-0004_jpg.rf.88b08988834c84de4e902d0bca6a1226.txt  video1_mp4-0005_jpg.rf.64ee676d4989662b2b7bf3804f8a23f3.txt  video1_mp4-0006_jpg.rf.2c2a9ad0e5515a35a3743086c5a1b913.txt  video1_mp4-0007_jpg.rf.17cb1f78b1563b8a5e990710140b954b.txt  video1_mp4-0008_jpg.rf.bb19124f246d07e1cade496217912f04.txt  video1_mp4-0009_jpg.rf.64f7f89265f830a068ca5b9fd58bbe2d.txt  video1_mp4-0010_jpg.rf.628986af8589a6cde98d2996932911a4.txt  video1_mp4-0011_jpg.rf.7809a7efb40421a36826f0b9b7131418.txt  video1_mp4-0012_jpg.rf.4d896f56a89083c4465f7600093732c5.txt  video1_mp4-0013_jpg.rf.034f9203e374f46f753b0221954bfd3e.txt  video1_mp4-0014_jpg.rf.4b294eb8d555296d7391c3c36d97083e.txt  video1_mp4-0015_jpg.rf.04086188182d8b1af7b4c64a5b104491.txt  video1_mp4-0016_jpg.rf.076d14ca618679ce6950ae0f05b4c67b.txt  video1_mp4-0017_jpg.rf.9b99e6bb20bf405cc8b6bfce0c3266b8.txt  video1_mp4-0018_jpg.rf.1ebdd909f8422f8ef6d498ae877acb63.txt  (+147 more)
src/alpr/: __init__.py  cli.py  dataset.py  evaluate.py  logging_utils.py  train.py
